BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_RIA_for_CUN_ID__c.object
<CustomObject>
    <description>List of RIAs that determine if CUN ID should be generated or not.</description>
    <fields>
        <fullName>ActualIssue__c</fullName>
        <description>Actual Issue Value (I)</description>
        <label>ActualIssue</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRequestType__c</fullName>
        <description>Customer Request Type</description>
        <label>CustomerRequestType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_IsGenerateCUNID__c</fullName>
        <description>Value to decide if CUN ID should be generated or not for corresponding RIA</description>
        <label>Generate CUN ID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RIA for CUN ID</label>
    <nameField>
        <label>Generate CUN ID RIA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIAs for CUN ID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>